--- a/settings.json
+++ b/settings.json
@@ -7,4 +7,5 @@
     "latex-workshop.view.pdf.hand": true,
     "latex-workshop.view.pdf.ref.viewer": "tabOrBrowser",
     "latex-workshop.view.pdf.viewer": "browser",
+    "workbench.startupEditor": "none",
 }
