--- a/settings.json
+++ b/settings.json
@@ -10,4 +10,13 @@
     "workbench.startupEditor": "none",
     "latex-workshop.viewer.pdf.internal.port": 65003,
     "latex-workshop.latex.autoBuild.run": "never",
+    "grammarly.config.documentDomain": "academic",
+    "grammarly.config.suggestions.ConjunctionAtStartOfSentence": true,
+    "grammarly.config.suggestions.InformalPronounsAcademic": true,
+    "grammarly.files.include": [
+        "**/readme.md",
+        "**/README.md",
+        "**/*.txt",
+        "**/*.tex"
+    ],
 }
